<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">X on fire</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="life_goal_1">Life goal 1</string>
    <string name="log_task_button1">Log Task Button 1</string>
    <string name="log_task_button2">Log Task Button 2</string>
    <string name="log_task_button3">Log Task Button 3</string>
<<<<<<< HEAD
    <string name="title_activity_log_task">Log Task</string>
    <string name="task_title">Task name:</string>
    <string name="task_title_edit">Enter task here</string>
    <string name="task_desc">Task description:</string>
    <string name="task_desc_edit">Enter task description here</string>
    <string name="lbl_save_button">Save changes</string>
=======
    <string name="title_activity_life_goal">Life Goal</string>
    <string name="save_button">Save changes</string>
    <string name="goal_type">Goal type here</string>
    <string name="goal_name">Goal name:</string>
    <string name="goal_name_edit">Enter your goal here</string>
    <string name="goal_desc">Goal description:</string>
    <string name="goal_desc_edit">Enter your goal description</string>
>>>>>>> origin/Life-Goals-Activity
</resources>
