<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.xonfire.xonfire.LifeGoal"
    android:background="#5c5c5cff">

    <ImageView
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:id="@+id/lifeImageView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:focusableInTouchMode="false" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_button"
        android:id="@+id/saveButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="saveButtonClick"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/goal_type"
        android:id="@+id/goalName"
        android:layout_below="@+id/lifeImageView"
        android:layout_centerHorizontal="true"
        android:textSize="30sp" />

    <LinearLayout android:id="@+id/goaltitle_block"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/goalName"
        android:paddingTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/goal_name"
            android:textSize="20sp"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editGoalTitle"
            android:hint="@string/goal_name_edit"
            android:textIsSelectable="false"
            android:textSize="25sp"
            android:inputType="text" />
    </LinearLayout>
    <LinearLayout android:id="@+id/goaldescription_block"
        android:layout_below="@id/goaltitle_block"
        android:paddingTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goal_desc"
        android:textSize="20sp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/editGoalDescription"
        android:hint ="@string/goal_desc_edit"/>

    </LinearLayout>
</RelativeLayout>
